analyzer/tests/snapshots/analysis__case_047_return_builtin_attributes.snap
---
source: analyzer/tests/analysis.rs
expression: "build_snapshot(fixture, src, &context)"

---
ModuleAttributes {
    type_defs: {
        "Foo": Contract(
            Contract {
                name: "Foo",
                functions: [
                    FunctionAttributes {
                        is_public: true,
                        name: "chainid",
                        params: [],
                        return_type: Base(
                            Numeric(
                                U256,
                            ),
                        ),
                    },
                    FunctionAttributes {
                        is_public: true,
                        name: "coinbase",
                        params: [],
                        return_type: Base(
                            Address,
                        ),
                    },
                    FunctionAttributes {
                        is_public: true,
                        name: "difficulty",
                        params: [],
                        return_type: Base(
                            Numeric(
                                U256,
                            ),
                        ),
                    },
                    FunctionAttributes {
                        is_public: true,
                        name: "gas_price",
                        params: [],
                        return_type: Base(
                            Numeric(
                                U256,
                            ),
                        ),
                    },
                    FunctionAttributes {
                        is_public: true,
                        name: "number",
                        params: [],
                        return_type: Base(
                            Numeric(
                                U256,
                            ),
                        ),
                    },
                    FunctionAttributes {
                        is_public: true,
                        name: "origin",
                        params: [],
                        return_type: Base(
                            Address,
                        ),
                    },
                    FunctionAttributes {
                        is_public: true,
                        name: "sender",
                        params: [],
                        return_type: Base(
                            Address,
                        ),
                    },
                    FunctionAttributes {
                        is_public: true,
                        name: "timestamp",
                        params: [],
                        return_type: Base(
                            Numeric(
                                U256,
                            ),
                        ),
                    },
                    FunctionAttributes {
                        is_public: true,
                        name: "value",
                        params: [],
                        return_type: Base(
                            Numeric(
                                U256,
                            ),
                        ),
                    },
                ],
            },
        ),
    },
    tuples_used: {},
}

note: 
  ┌─ features/return_builtin_attributes.fe:3:16
  │
3 │         return block.coinbase
  │                ^^^^^^^^^^^^^^ attributes hash: 513065555763557710
  │
  = ExpressionAttributes {
        typ: Base(
            Address,
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/return_builtin_attributes.fe:6:16
  │
6 │         return block.difficulty
  │                ^^^^^^^^^^^^^^^^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/return_builtin_attributes.fe:9:16
  │
9 │         return block.number
  │                ^^^^^^^^^^^^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
   ┌─ features/return_builtin_attributes.fe:12:16
   │
12 │         return block.timestamp
   │                ^^^^^^^^^^^^^^^ attributes hash: 16797824492585953824
   │
   = ExpressionAttributes {
         typ: Base(
             Numeric(
                 U256,
             ),
         ),
         location: Value,
         move_location: None,
     }

note: 
   ┌─ features/return_builtin_attributes.fe:15:16
   │
15 │         return chain.id
   │                ^^^^^^^^ attributes hash: 16797824492585953824
   │
   = ExpressionAttributes {
         typ: Base(
             Numeric(
                 U256,
             ),
         ),
         location: Value,
         move_location: None,
     }

note: 
   ┌─ features/return_builtin_attributes.fe:18:16
   │
18 │         return msg.sender
   │                ^^^^^^^^^^ attributes hash: 513065555763557710
   │
   = ExpressionAttributes {
         typ: Base(
             Address,
         ),
         location: Value,
         move_location: None,
     }

note: 
   ┌─ features/return_builtin_attributes.fe:21:16
   │
21 │         return msg.value
   │                ^^^^^^^^^ attributes hash: 16797824492585953824
   │
   = ExpressionAttributes {
         typ: Base(
             Numeric(
                 U256,
             ),
         ),
         location: Value,
         move_location: None,
     }

note: 
   ┌─ features/return_builtin_attributes.fe:24:16
   │
24 │         return tx.origin
   │                ^^^^^^^^^ attributes hash: 513065555763557710
   │
   = ExpressionAttributes {
         typ: Base(
             Address,
         ),
         location: Value,
         move_location: None,
     }

note: 
   ┌─ features/return_builtin_attributes.fe:27:16
   │
27 │         return tx.gas_price
   │                ^^^^^^^^^^^^ attributes hash: 16797824492585953824
   │
   = ExpressionAttributes {
         typ: Base(
             Numeric(
                 U256,
             ),
         ),
         location: Value,
         move_location: None,
     }

note: 
  ┌─ features/return_builtin_attributes.fe:2:5
  │  
2 │ ╭     pub def coinbase() -> address:
3 │ │         return block.coinbase
  │ ╰─────────────────────────────^ attributes hash: 12397519043026993572
  │  
  = FunctionAttributes {
        is_public: true,
        name: "coinbase",
        params: [],
        return_type: Base(
            Address,
        ),
    }

note: 
  ┌─ features/return_builtin_attributes.fe:5:5
  │  
5 │ ╭     pub def difficulty() -> u256:
6 │ │         return block.difficulty
  │ ╰───────────────────────────────^ attributes hash: 5496647220444456907
  │  
  = FunctionAttributes {
        is_public: true,
        name: "difficulty",
        params: [],
        return_type: Base(
            Numeric(
                U256,
            ),
        ),
    }

note: 
  ┌─ features/return_builtin_attributes.fe:8:5
  │  
8 │ ╭     pub def number() -> u256:
9 │ │         return block.number
  │ ╰───────────────────────────^ attributes hash: 17633445460492668559
  │  
  = FunctionAttributes {
        is_public: true,
        name: "number",
        params: [],
        return_type: Base(
            Numeric(
                U256,
            ),
        ),
    }

note: 
   ┌─ features/return_builtin_attributes.fe:11:5
   │  
11 │ ╭     pub def timestamp() -> u256:
12 │ │         return block.timestamp
   │ ╰──────────────────────────────^ attributes hash: 6842712852652722036
   │  
   = FunctionAttributes {
         is_public: true,
         name: "timestamp",
         params: [],
         return_type: Base(
             Numeric(
                 U256,
             ),
         ),
     }

note: 
   ┌─ features/return_builtin_attributes.fe:14:5
   │  
14 │ ╭     pub def chainid() -> u256:
15 │ │         return chain.id
   │ ╰───────────────────────^ attributes hash: 11973337097366299082
   │  
   = FunctionAttributes {
         is_public: true,
         name: "chainid",
         params: [],
         return_type: Base(
             Numeric(
                 U256,
             ),
         ),
     }

note: 
   ┌─ features/return_builtin_attributes.fe:17:5
   │  
17 │ ╭     pub def sender() -> address:
18 │ │         return msg.sender
   │ ╰─────────────────────────^ attributes hash: 1359345374899323188
   │  
   = FunctionAttributes {
         is_public: true,
         name: "sender",
         params: [],
         return_type: Base(
             Address,
         ),
     }

note: 
   ┌─ features/return_builtin_attributes.fe:20:5
   │  
20 │ ╭     pub def value() -> u256:
21 │ │         return msg.value
   │ ╰────────────────────────^ attributes hash: 15929707993013841213
   │  
   = FunctionAttributes {
         is_public: true,
         name: "value",
         params: [],
         return_type: Base(
             Numeric(
                 U256,
             ),
         ),
     }

note: 
   ┌─ features/return_builtin_attributes.fe:23:5
   │  
23 │ ╭     pub def origin() -> address:
24 │ │         return tx.origin
   │ ╰────────────────────────^ attributes hash: 7617031651227520347
   │  
   = FunctionAttributes {
         is_public: true,
         name: "origin",
         params: [],
         return_type: Base(
             Address,
         ),
     }

note: 
   ┌─ features/return_builtin_attributes.fe:26:5
   │  
26 │ ╭     pub def gas_price() -> u256:
27 │ │         return tx.gas_price
   │ ╰───────────────────────────^ attributes hash: 8769757081253156598
   │  
   = FunctionAttributes {
         is_public: true,
         name: "gas_price",
         params: [],
         return_type: Base(
             Numeric(
                 U256,
             ),
         ),
     }

note: 
   ┌─ features/return_builtin_attributes.fe:1:1
   │  
 1 │ ╭ contract Foo:
 2 │ │     pub def coinbase() -> address:
 3 │ │         return block.coinbase
 4 │ │ 
   · │
26 │ │     pub def gas_price() -> u256:
27 │ │         return tx.gas_price
   │ ╰───────────────────────────^ attributes hash: 6040907524015687009
   │  
   = ContractAttributes {
         public_functions: [
             FunctionAttributes {
                 is_public: true,
                 name: "chainid",
                 params: [],
                 return_type: Base(
                     Numeric(
                         U256,
                     ),
                 ),
             },
             FunctionAttributes {
                 is_public: true,
                 name: "coinbase",
                 params: [],
                 return_type: Base(
                     Address,
                 ),
             },
             FunctionAttributes {
                 is_public: true,
                 name: "difficulty",
                 params: [],
                 return_type: Base(
                     Numeric(
                         U256,
                     ),
                 ),
             },
             FunctionAttributes {
                 is_public: true,
                 name: "gas_price",
                 params: [],
                 return_type: Base(
                     Numeric(
                         U256,
                     ),
                 ),
             },
             FunctionAttributes {
                 is_public: true,
                 name: "number",
                 params: [],
                 return_type: Base(
                     Numeric(
                         U256,
                     ),
                 ),
             },
             FunctionAttributes {
                 is_public: true,
                 name: "origin",
                 params: [],
                 return_type: Base(
                     Address,
                 ),
             },
             FunctionAttributes {
                 is_public: true,
                 name: "sender",
                 params: [],
                 return_type: Base(
                     Address,
                 ),
             },
             FunctionAttributes {
                 is_public: true,
                 name: "timestamp",
                 params: [],
                 return_type: Base(
                     Numeric(
                         U256,
                     ),
                 ),
             },
             FunctionAttributes {
                 is_public: true,
                 name: "value",
                 params: [],
                 return_type: Base(
                     Numeric(
                         U256,
                     ),
                 ),
             },
         ],
         init_function: None,
         events: [],
         list_expressions: {},
         string_literals: {},
         structs: [],
         external_contracts: [],
         created_contracts: {},
     }

note: 
  ┌─ features/return_builtin_attributes.fe:2:27
  │
2 │     pub def coinbase() -> address:
  │                           ^^^^^^^ attributes hash: 574436082528610497
  │
  = Base(
        Address,
    )

note: 
  ┌─ features/return_builtin_attributes.fe:5:29
  │
5 │     pub def difficulty() -> u256:
  │                             ^^^^ attributes hash: 17942395924573474124
  │
  = Base(
        Numeric(
            U256,
        ),
    )

note: 
  ┌─ features/return_builtin_attributes.fe:8:25
  │
8 │     pub def number() -> u256:
  │                         ^^^^ attributes hash: 17942395924573474124
  │
  = Base(
        Numeric(
            U256,
        ),
    )

note: 
   ┌─ features/return_builtin_attributes.fe:11:28
   │
11 │     pub def timestamp() -> u256:
   │                            ^^^^ attributes hash: 17942395924573474124
   │
   = Base(
         Numeric(
             U256,
         ),
     )

note: 
   ┌─ features/return_builtin_attributes.fe:14:26
   │
14 │     pub def chainid() -> u256:
   │                          ^^^^ attributes hash: 17942395924573474124
   │
   = Base(
         Numeric(
             U256,
         ),
     )

note: 
   ┌─ features/return_builtin_attributes.fe:17:25
   │
17 │     pub def sender() -> address:
   │                         ^^^^^^^ attributes hash: 574436082528610497
   │
   = Base(
         Address,
     )

note: 
   ┌─ features/return_builtin_attributes.fe:20:24
   │
20 │     pub def value() -> u256:
   │                        ^^^^ attributes hash: 17942395924573474124
   │
   = Base(
         Numeric(
             U256,
         ),
     )

note: 
   ┌─ features/return_builtin_attributes.fe:23:25
   │
23 │     pub def origin() -> address:
   │                         ^^^^^^^ attributes hash: 574436082528610497
   │
   = Base(
         Address,
     )

note: 
   ┌─ features/return_builtin_attributes.fe:26:28
   │
26 │     pub def gas_price() -> u256:
   │                            ^^^^ attributes hash: 17942395924573474124
   │
   = Base(
         Numeric(
             U256,
         ),
     )


